--- a/QuickSharpApiClient.csproj
+++ b/QuickSharpApiClient.csproj
@@ -46,8 +46,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApiClient.cs" />
+    <Compile Include="ApiClientHelper.cs" />
+    <Compile Include="Enums.cs" />
     <Compile Include="FileHelper.cs" />
     <Compile Include="HowToUse.cs" />
+    <Compile Include="JsonHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
