--- a/QuickSharpApiClient.Feed.File/QuickSharpApiClient.Feed.Files.csproj
+++ b/QuickSharpApiClient.Feed.File/QuickSharpApiClient.Feed.Files.csproj
@@ -4,15 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D8805B55-2771-4787-BA15-B3E663501FB5}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{F7A98FFD-03FA-4741-B28B-AF514A6C2CB9}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>QuickSharpApiClient</RootNamespace>
-    <AssemblyName>QuickSharpApiClient</AssemblyName>
+    <RootNamespace>QuickSharpApiClient.Feed.Files</RootNamespace>
+    <AssemblyName>QuickSharpApiClient.Feed.Files</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +23,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -34,10 +36,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -45,23 +44,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ApiClient.cs" />
-    <Compile Include="ApiClientHelper.cs" />
-    <Compile Include="HowToUse.cs" />
+    <Compile Include="FileHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="LICENSE" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="QuickSharpApiClient.Common\QuickSharpApiClient.Common.csproj">
+    <ProjectReference Include="..\QuickSharpApiClient.Common\QuickSharpApiClient.Common.csproj">
       <Project>{8614fda1-53cf-4e42-8e63-75bcc7536c9f}</Project>
       <Name>QuickSharpApiClient.Common</Name>
-    </ProjectReference>
-    <ProjectReference Include="QuickSharpApiClient.Feed.File\QuickSharpApiClient.Feed.Files.csproj">
-      <Project>{f7a98ffd-03fa-4741-b28b-af514a6c2cb9}</Project>
-      <Name>QuickSharpApiClient.Feed.Files</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
