--- a/QuickSharpApiClient.Tests/QuickSharpApiClient.Tests.csproj
+++ b/QuickSharpApiClient.Tests/QuickSharpApiClient.Tests.csproj
@@ -44,9 +44,17 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\QuickSharpApiClient.Common\QuickSharpApiClient.Common.csproj">
+      <Project>{8614fda1-53cf-4e42-8e63-75bcc7536c9f}</Project>
+      <Name>QuickSharpApiClient.Common</Name>
+    </ProjectReference>
     <ProjectReference Include="..\QuickSharpApiClient.csproj">
       <Project>{d8805b55-2771-4787-ba15-b3e663501fb5}</Project>
       <Name>QuickSharpApiClient</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\QuickSharpApiClient.Feed.File\QuickSharpApiClient.Feed.Files.csproj">
+      <Project>{f7a98ffd-03fa-4741-b28b-af514a6c2cb9}</Project>
+      <Name>QuickSharpApiClient.Feed.Files</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
