--- a/feed/feed.csproj
+++ b/feed/feed.csproj
@@ -47,7 +47,25 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\QuickSharpApiClient.Common\QuickSharpApiClient.Common.csproj">
+      <Project>{8614fda1-53cf-4e42-8e63-75bcc7536c9f}</Project>
+      <Name>QuickSharpApiClient.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\QuickSharpApiClient.Feed.File\QuickSharpApiClient.Feed.Files.csproj">
+      <Project>{f7a98ffd-03fa-4741-b28b-af514a6c2cb9}</Project>
+      <Name>QuickSharpApiClient.Feed.Files</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PreBuildEvent>
+    </PreBuildEvent>
+  </PropertyGroup>
+  <PropertyGroup>
+    <PostBuildEvent>
+    </PostBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
