--- a/QuickSharpApiClient.csproj
+++ b/QuickSharpApiClient.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{D8805B55-2771-4787-BA15-B3E663501FB5}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>QuickSharpApiClient</RootNamespace>
     <AssemblyName>QuickSharpApiClient</AssemblyName>
